--- a/contacts.html
+++ b/contacts.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contacts</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1> My Contacts</h1>
@@ -12,5 +13,15 @@
       <p>
         sable123@gmail.com
       </p>
+      <hr />
+      <form class="" action="mailto:swapnilsable5499@gmail.com" method="post" enctype="text/plain">
+        <label>Your Name:</label>
+        <input type="text" name="firstName" value=""/><br />
+        <label>Your Email:</label>
+        <input type="email" name="yourEmail" value="" /><br />
+        <label>Message</label><br />
+        <textarea name="yourMessage" rows="10" cols="50"></textarea><br />
+        <input type="submit" value="Submit" />
+      </form>
   </body>
 </html>
