--- a/hobbies.html
+++ b/hobbies.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h3>Hobbies</h3>
+    <h3> Hobbies</h3>
     <ol>
       <li>Gaming <strong><a href="https://mobile.twitter.com/iamsable99">FIFA MODDER</a></strong></li>
       <li>Cricket</li>
